gcc/testsuite/algol68/compile/error-mode-stropping-17.a68
# { dg-options "-fstropping=upper" } #
BEGIN FLEX[1:0]INT j;
      j := "joo" { dg-error "CHAR.*FLEX.*INT" }
END
